Wraps main image and nav bar into header tags and ensures it is the height of the screen when loaded

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -22,7 +22,8 @@ nav {
   margin: 1em 0;
 }
 
-article {
+article,
+header {
   height: 100vh;
   margin: 50px 0;
 }
@@ -204,7 +205,8 @@ li {
     margin-top: 50%;
   }
 
-  article {
+  article,
+  header {
     height: 100%;
     padding: 0 10px;
   }
@@ -235,7 +237,8 @@ li {
     text-align: center;
   }
 
-  article {
+  article,
+  header {
     height: 100%;
     padding: 0 10px;
   }
@@ -243,7 +246,8 @@ li {
 
 /* Make sure sections don't overlap */
 @media (max-height: 650px) {
-  article {
+  article,
+  header {
     height: 100%;
   }
 }
